# kleptool-package-manager

./: .eslintrc.json  .gitignore  .prettierignore  .prettierrc  .tmp_mutant.1354284.ts  K-Space-Translation.md  README-TODOs-graph.md  README-TODOs.md  README-auto-wasm.md  README-dynamic-wasm.md  README-wasm.md  README.md  TODOs.md  build-wasm.sh  bun.config.ts  bunfig.toml  deno.json  eslint.config.js  klep.tasks  kleptool-package-manager.code-workspace  package.json  pyproject.toml  temp-debug.js  temp-debug.ts  test-klep.tasks  tsconfig.json  wasm-build.sh
.cursor/: pr_cache.json
.cursor/rules/: deno-rules.mdc  project structure.mdc  typescript-file-org.mdc  typescript.mdc  use-kerror.mdc  use-moxxy.mdc
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/actions/handle-coverage/: action.yml
.github/actions/setup-cargo-crates/: action.yml
.github/actions/setup-environment/: action.yml
.github/actions/setup-klep/: action.yml
.github/workflows/: build-and-test.yml  coverage-badge.yml  linux.dev.yml  linux.pr.yml  macos.yml  quality-control.yml  test-linux.yml  test-macos.yml  test-windows.yml  windows.yml
design-work/: a-star-performance-tradeoffs-and-dataset-mining.md  k-space-translation.md  ts2rust-api.md
scripts/: build-standalone.ts  common.sh  compare-mutation-coverage.sh  coverage-summary.sh  ensure-final-newlines.sh  extract-coverage.sh  extract-mutation-coverage.sh  filter-coverage.sh  link.sh  pathogen-aggregate.sh  pathogen-cleanup.sh  pathogen-plan.sh  pr-cache-cleanup.sh  pr-cache-init.sh  pr-cache-remove-id.sh  pr-cache-status.sh  pr-commit.sh  pr-resolve-thread.sh  setup-path.sh  unlink.sh  update-coverage-badges.sh  update-mutation-badges.sh
src/: defaults.ts  deno.ts  dependency-resolver.ts  depsfile.ts  errors.ts  git.ts  git.unit.test.ts  gitUtils.test.ts  gitUtils.ts  index.ts  index.tsx  keepfile.ts  kerror.ts  klep.ts  version-safety.ts
src/cache/: source.ts
src/cli/: depsfile.spec.ts  depsfile.ts  file.ts  git.spec.ts  git.ts  keepfile.spec.ts  keepfile.ts  kerror.spec.ts  kerror.ts  klep-backend.ts  klep.ts  process.spec.ts  process.ts  resource-loader.spec.ts  resource-loader.ts  rust-client.spec.ts  rust-client.ts  sh.ts  task-runner.spec.ts  task-runner.ts  version-safety.ts
src/cli/dependency-resolution/: resolver.ts
src/cli/schemas/: klep.deps.schema.ts  klep.tasks.schema.ts
src/dependency-resolution/: a-star.ts  graph.ts  resolver.ts
src/dependency-resolver/: graph.ts
src/kleptool/: index.py
src/rust/: Cargo.toml  main.rs  rustfmt.toml
src/rust/api/ast/: Cargo.toml
src/rust/api/ast/src/: lib.rs
src/rust/api/astar/: Cargo.toml
src/rust/api/astar/src/: lib.rs
src/rust/api/common/: Cargo.toml
src/rust/api/common/src/: ipc.rs  lib.rs
src/rust/api/nn/: Cargo.toml
src/rust/api/nn/src/: lib.rs
src/rust/api/std/: Cargo.toml
src/rust/api/std/src/: lib.rs
src/rust/code-quality-checker/: Cargo.toml
src/rust/code-quality-checker/src/: analyzer.rs  languages.rs  main.rs  metrics.rs
src/rust/klep-mutation/: Cargo.toml
src/rust/klep-mutation-v2/: Cargo.toml
src/rust/klep-mutation-v2/src/: ast_parser.rs  cache.rs  file_safety.rs  main.rs  mutation_engine.rs  mutation_runner.rs  types.rs
src/rust/macros/: Cargo.toml
src/rust/macros/src/: lib.rs
src/rust/pathogen/: Cargo.toml
src/rust/pathogen-worker/: Cargo.toml
src/rust/pathogen-worker/src/: main.rs
src/rust/pathogen/src/: ast_parser.rs  cache.rs  lib.rs  main.rs  types.rs  worker_pool.rs
src/rust/src/: lib.rs  main.rs  toy_utils.rs
src/rust/web-assembly/: Cargo.toml  lib.rs
src/rust/web-assembly/macros/: Cargo.toml
src/rust/web-assembly/macros/src/: lib.rs
src/rust/web-assembly/src/: lib.rs
src/schema/: gimme.schema.json
src/schemas/: dependency.schema.ts  klep.deps.schema.ts  klep.keep.schema.ts
src/testing/: README-Testing-Improvements.md  cli-helpers.ts  extensions.ts  mock-prefixes.ts  mod.ts  moxxy-global.d.ts  moxxy-setup.ts  moxxy-test-debug.ts  moxxy-test-module.ts  moxxy-test-target.spec.ts  moxxy-test-target.ts  moxxy-transformer.ts  moxxy.ts  test-setup.ts  transform-plugin.ts  utils.ts
src/testing/demo/: color-and-windows-demo.spec.ts
src/testing/integration/: cli-helpers.ts  cli.integration.spec.ts  test-helpers.ts
src/testing/moxxy/: moxxy-test-target.spec.ts  moxxy.ts  transformer-plugin.ts
src/testing/setup/: windows-path-setup.ts
src/testing/utils/: cli-helpers.ts  cross-platform.ts  integration-helpers.ts  windows-path-simulator.ts  xplat-helpers.ts
src/ts/: wasm-bridge.ts
