[workspace]
resolver = "2"
members = [
  "api/ast",
  "api/astar",
  "api/common",
  "api/nn",
  "api/std",
]

# Workspace-wide linting configuration
[workspace.lints.rust]
unsafe_code = "deny"
missing_docs = "warn"
unused_imports = "deny"
dead_code = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
# Allow some pedantic lints that can be overly strict
module_name_repetitions = "allow"
missing_errors_doc = "allow"
