[package]
name = "code-quality-checker"
version = "0.1.0"
edition = "2021"
description = "A tree-sitter based code quality analyzer for checking nesting depth, function length, and cyclomatic complexity"
license = "MIT"
repository = "https://github.com/TravelSizedLions/kleptool-package-manager"
readme = "README.md"
keywords = ["code-quality", "static-analysis", "tree-sitter", "linting"]
categories = ["development-tools", "command-line-utilities"]

[dependencies]
tree-sitter = "0.25"
tree-sitter-typescript = "0.23"
tree-sitter-rust = "0.23"
tree-sitter-python = "0.23"
tree-sitter-bash = "0.23"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }

[build-dependencies]
cc = "1.0" 
