[package]
name = "klep-mutation"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "klep-mutation"
path = "src/main.rs"

[dependencies]
# Core functionality
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }

# File operations and parsing
walkdir = "2.0"
regex = "1.0"

# Parallelization
rayon = "1.8"
crossbeam = "0.8"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Performance
dashmap = "5.5"
once_cell = "1.19"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Async futures
futures = "0.3"



[dev-dependencies]
tempfile = "3.8" 