[package]
name = "pathogen-worker"
version = "0.1.0"
edition = "2021"
description = "Worker process for distributed mutation testing execution"
license = "MIT"
repository = "https://github.com/TravelSizedLions/kleptool-package-manager"
readme = "README.md"
keywords = ["mutation-testing", "worker", "testing", "distributed"]
categories = ["development-tools::testing"]

[[bin]]
name = "pathogen-worker"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] } 
