[package]
name = "web_assembly"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.87"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lazy_static = "1.4.0"
once_cell = "1.18.0"
wasm_bindgen_macro_support = "0.2.87"
paste = "1.0.14"
web_assembly_macros = { path = "./macros" }

[workspace]
members = ["macros"]

[profile.release]
opt-level = 3
lto = true 