[package]
name = "gud_ast"
version = "0.0.1"
edition = "2021"
description = "Abstract syntax tree utilities for the Kleptool package manager"
license = "MIT"
repository = "https://github.com/user/kleptool-package-manager"
readme = "README.md"
keywords = ["ast", "parsing", "syntax-tree"]
categories = ["development-tools", "parsing"]

[lints]
workspace = true

[lib]
crate-type = ["lib", "cdylib"]
path = "src/lib.rs"
name = "gud_ast"

[dependencies]
gud_common = { path = "../common" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
paste = "1.0.14"
lazy_static = "1.4.0"
