[package]
name = "gud_common"
version = "0.0.1"
edition = "2021"
description = "Common utilities for the Kleptool package manager"
license = "MIT"
repository = "https://github.com/user/kleptool-package-manager"
readme = "README.md"
keywords = ["utility", "ipc", "common"]
categories = ["development-tools"]

[lints]
workspace = true

[lib]
crate-type = ["lib", "cdylib"]
path = "src/lib.rs"
name = "gud_common"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
paste = "1.0.14"
lazy_static = "1.4.0"
